// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Combos test { disabled: false, type: 'dropdown', showRipple: false } 1`] = `
.emotion-1 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-1.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-1.__pebble__button__disabled:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-1.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-1.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-1.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-1.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-1:focus {
  border: none;
}

.emotion-1.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-1.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 12px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<button
  className="__pebble__button__dropdown emotion-1"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
  <i
    className="icon-arrow-down emotion-0"
  />
</button>
`;

exports[`Button Combos test { disabled: false, type: 'dropdown', showRipple: true } 1`] = `
.emotion-1 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-1.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-1.__pebble__button__disabled:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-1.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-1.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-1.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-1.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-1:focus {
  border: none;
}

.emotion-1.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-1.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 12px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<button
  className="__pebble__button__dropdown emotion-1"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
  <i
    className="icon-arrow-down emotion-0"
  />
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Button Combos test { disabled: false, type: 'link', showRipple: false } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

<button
  className="__pebble__button_link emotion-0"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: false, type: 'link', showRipple: true } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

<button
  className="__pebble__button_link emotion-0"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: false, type: 'primary', showRipple: false } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #ffffff;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #6161FF;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

<button
  className="emotion-0"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: false, type: 'primary', showRipple: true } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #ffffff;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #6161FF;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

<button
  className="emotion-0"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Button Combos test { disabled: false, type: 'secondary', showRipple: false } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

<button
  className="emotion-0"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: false, type: 'secondary', showRipple: true } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

<button
  className="emotion-0"
  onClick={[Function]}
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
  <canvas
    height={0}
    onDragOver={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "borderRadius": "inherit",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": "100%",
      }
    }
    width={0}
  />
</button>
`;

exports[`Button Combos test { disabled: true, type: 'dropdown', showRipple: false } 1`] = `
.emotion-1 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-1.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-1.__pebble__button__disabled:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-1.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-1.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-1.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-1.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-1:focus {
  border: none;
}

.emotion-1.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-1.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 12px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<button
  className="__pebble__button__disabled __pebble__button__dropdown emotion-1"
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
  <i
    className="icon-arrow-down emotion-0"
  />
</button>
`;

exports[`Button Combos test { disabled: true, type: 'dropdown', showRipple: true } 1`] = `
.emotion-1 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-1.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-1.__pebble__button__disabled:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-1.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-1.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-1.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-1.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-1.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-1.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-1.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-1:focus {
  border: none;
}

.emotion-1.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-1.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-1.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0 {
  margin-left: 15px;
  font-weight: bold;
  font-size: 12px;
  -webkit-transition: -webkit-transform ease-out .2s;
  -webkit-transition: transform ease-out .2s;
  transition: transform ease-out .2s;
  will-transform: transform;
  margin-top: 2px;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

<button
  className="__pebble__button__disabled __pebble__button__dropdown emotion-1"
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
  <i
    className="icon-arrow-down emotion-0"
  />
</button>
`;

exports[`Button Combos test { disabled: true, type: 'link', showRipple: false } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

<button
  className="__pebble__button__disabled __pebble__button_link emotion-0"
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: true, type: 'link', showRipple: true } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

<button
  className="__pebble__button__disabled __pebble__button_link emotion-0"
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: true, type: 'primary', showRipple: false } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #ffffff;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #6161FF;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

<button
  className="__pebble__button__disabled emotion-0"
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: true, type: 'primary', showRipple: true } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #ffffff;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #6161FF;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

<button
  className="__pebble__button__disabled emotion-0"
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: true, type: 'secondary', showRipple: false } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

<button
  className="__pebble__button__disabled emotion-0"
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;

exports[`Button Combos test { disabled: true, type: 'secondary', showRipple: true } 1`] = `
.emotion-0 {
  line-height: 23px;
  height: 40px;
  padding: 0 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: all ease-out .2s;
  transition: all ease-out .2s;
  border-radius: 3px;
  outline: none;
  position: relative;
  overflow: hidden;
  cursor: pointer;
  white-space: nowrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: 0;
  font-weight: normal;
  color: #101721;
  font-size: 12px;
  min-width: 100px;
  height: 40px;
  background-color: #EDEDED;
  box-shadow: none;
}

.emotion-0.__pebble__button__disabled {
  cursor: not-allowed;
}

.emotion-0.__pebble__button__disabled:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown {
  color: #101721;
  background-color: #ffffff;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0.__pebble__button__dropdown:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__dropdown.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

.emotion-0.__pebble__button__dropdown__open {
  color: #ffffff;
  background-color: #6161FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(.__pebble__button__disabled):hover {
  background-color: #7070FF;
}

.emotion-0.__pebble__button__dropdown__open:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #5656ED;
}

.emotion-0.__pebble__button__dropdown__open.__pebble__button__disabled {
  color: #ffffff;
  background-color: #C0C0FF;
}

.emotion-0.__pebble__button__dropdown__open:focus {
  border: none;
}

.emotion-0.__pebble__button__dropdown__selected {
  background-color: #6161FF;
  color: #ffffff;
}

.emotion-0:focus {
  border: none;
}

.emotion-0.__pebble__button_link {
  background-color: transparent;
  border: 0;
  color: #6161FF;
  min-width: 0;
  font-size: 14px;
}

.emotion-0.__pebble__button_link:not(.__pebble__button__disabled):hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0.__pebble__button_link.__pebble__button__disabled {
  color: #C0C0FF;
  cursor: not-allowed;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):hover {
  background-color: #F7F7F9;
}

.emotion-0:not(.__pebble__button__dropdown):not(__pebble__button__disabled):active {
  background-color: #E0E0E0;
}

.emotion-0.__pebble__button__disabled {
  color: #9FA6B0;
  background-color: #EDEDED;
}

<button
  className="__pebble__button__disabled emotion-0"
  style={
    Object {
      "width": undefined,
    }
  }
>
  Submit
   
</button>
`;
